--- a/configuration.properties
+++ b/configuration.properties
@@ -1,13 +1,15 @@
-qa3_api_url=https://cybertek-reservation-api-qa3.herokuapp.com
+qa3_api_url=https://cybertek-reservation-api-docs.herokuapp.com/
+
 dbUsername=qa_user
 dbPassword=Cybertek11!
 dbUrl=jdbc:postgrsql://room-reservation-qa3.cxvqfpt4mc2y.us-east-1.rds.amazonaws.com:5432/room_reservation_qa3?
 
 teacher_email=teachervawiltonamiss@gmail.com
-teacher_password= wiltonamiss
+teacher_password=wiltonamiss
 
 team_member_email=nshearsby7w@uiuc.edu
 team_member_password=lorettabradnum
 
 team_leader_email=daldie7l@seattletimes.com
 team_leader_password=ruthannjohnes
+
